[gd_scene load_steps=6 format=3 uid="uid://b6r1wd1ctn0b2"]

[ext_resource type="Texture2D" uid="uid://cvjp578yskg1i" path="res://Assets/Sprites/groundSnow.png" id="1_4eske"]
[ext_resource type="Script" uid="uid://b7tfat7iq30u4" path="res://Scenes/Ground/ground.gd" id="1_7ggpg"]
[ext_resource type="AudioStream" uid="uid://dnm5b6pojwpjl" path="res://Assets/Audio/sfx_die.wav" id="3_h71jw"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7ggpg"]
size = Vector2(810, 63)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4eske"]
size = Vector2(810, 63)

[node name="Ground" type="Node2D"]
script = ExtResource("1_7ggpg")

[node name="Ground_1" type="Area2D" parent="."]
position = Vector2(404, 0)

[node name="Sprite2D" type="Sprite2D" parent="Ground_1"]
unique_name_in_owner = true
texture = ExtResource("1_4eske")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground_1"]
position = Vector2(0, 3.5)
shape = SubResource("RectangleShape2D_7ggpg")

[node name="Ground_2" type="Area2D" parent="."]
position = Vector2(1212, 0)

[node name="Sprite2D" type="Sprite2D" parent="Ground_2"]
texture = ExtResource("1_4eske")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground_2"]
shape = SubResource("RectangleShape2D_4eske")
debug_color = Color(0.956149, 0.0946099, 0.472447, 0.42)

[node name="GameOverSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_h71jw")
bus = &"sfx"

[connection signal="body_entered" from="Ground_1" to="." method="_on_ground_body_entered"]
[connection signal="body_entered" from="Ground_2" to="." method="_on_ground_body_entered"]
